<resources>
    <string name="app_name">OfficeGo</string>
    <string name="app_name_debug">OfficeGo开发版</string>
    <string name="app_name_test">OfficeGo测试版</string>
    <string name="app_name_pre">OfficeGo预发版</string>
    <!--    <string name="app_name">Officego伙办连平台</string>-->
    <string name="str_tab_home">首页</string>
    <string name="str_tab_message">消息</string>
    <string name="str_tab_collect">收藏</string>
    <string name="str_tab_mine">我的</string>
    <string name="str_login">登录</string>
    <string name="str_platform_skip">跳过</string>
    <string name="str_button_check">验证</string>
    <string name="str_get_sms_code">获取验证码</string>
    <string name="str_please_input_sms_code">请输入验证码</string>
    <string name="str_sms_code">验证码</string>
    <string name="str_please_input_mobile">请输入手机号码</string>
    <string name="str_mobile">手机号</string>
    <string name="str_check_mobile">验证手机号</string>
    <string name="str_please_input_platform_mobile">请输入您在%s的手机号</string>
    <string name="str_platform_sms_code_error">验证码错误，请重新输入</string>
    <string name="str_count_down_second">s</string>
    <string name="str_resend">重新发送</string>
    <string name="str_get_code">获取短信验证码</string>
    <string name="toast_press_again_quit">再按一次退出桌面</string>
    <string name="str_house_all">全部</string>
    <string name="str_house_office">写字楼</string>
    <string name="str_house_tenant">共享办公</string>
    <string name="str_order_def">默认排序</string>
    <string name="str_order_price_up_down">价格从高到低</string>
    <string name="str_order_price_down_up">价格从低到高</string>
    <string name="str_order_area_up_down">面积从大到小</string>
    <string name="str_order_area_down_up">面积从小到大</string>
    <string name="str_clear">重置</string>
    <string name="str_independent_office">独立办公室</string>
    <string name="str_open_work">开放工位</string>
    <string name="str_llook_more">查看更多</string>
    <string name="str_title_characteristic_service">特色服务</string>
    <string name="str_title_create_service">企业服务</string>
    <string name="str_title_base_sservice">基础服务</string>
    <string name="str_open_office">开放工位</string>
    <string name="str_collect">收藏</string>
    <string name="str_collected">已收藏</string>
    <string name="str_find_house_owner">找房东聊</string>
    <string name="str_goto_top">回顶</string>
    <string name="str_office_building">写字楼/网点</string>
    <string name="str_work_office">办公室</string>
    <string name="str_history">历史</string>
    <string name="str_find">发现</string>
    <string name="str_recommend">推荐</string>
    <string name="str_viewing_date">看房行程</string>
    <string name="str_help">帮助与反馈</string>
    <string name="str_customer_service">客服</string>
    <string name="str_privacy">隐私条款</string>
    <string name="str_about_us">关于我们</string>
    <!--    sd -->
    <string name="str_take_photo">拍照</string>
    <string name="str_choose_from_album">从相册选择</string>
    <string name="str_no_sd">设备没有SD卡！</string>
    <string name="str_please_open_sd">请允许打操作SDCard！！</string>
    <string name="str_please_open_camera">请允许打开相机！！</string>
    <string name="str_switch_owner">切换为房东</string>
    <string name="are_you_sure_switch_owner">是否确认切换为房东?</string>
    <string name="str_cannot_get_mine_phone_use_sms">无法获取本机号码，请使用验证码登录</string>
    <string name="rc_chat_tip">我对你发布的房源有兴趣，能聊聊吗？</string>
    <string name="text_right_now_try">即刻体验</string>
    <string name="str_protocol">
感谢你对OfficeGo（伙办连）的信任！我们依据监管要求更新了《服务协议》和《隐私条款》，特向 你说明如下：\t
\t\n1.为了向你提供相关功能，我们会收集、使用必要的信息；
\t\n2.基于你的授权我们可能会获取你的位置、相机权限、麦克风权限等信息，你有权拒绝或取消授权；
\t\n3.在你浏览视频时缓存相关文件，我们会申请存储权限，同时，为了信息推送和安全风控所需，我们会申请系统权限收集设备信息、日志信息；
\t\n4.通过获取用户手机状态权限确定本机设备ID，以保证为你个性化推荐内容；通过获取网络状态权限和用户wifi信息权限，观看视频时提醒用户网络状态；
\t\n5.我们会采取业界先进的安全措施保护你的信息安全；
\t\n6.未经你的同意，我们不会从第三方处获取、共享或向其提供你的信息。</string>
    <string name="str_text_vr">VR</string>
    <string name="str_no_vr">暂无VR视频</string>
    <string name="str_selected_owner_to_chat">该楼盘有多个房东入驻，请选择一个房源再跟房东聊</string>
    <string name="str_selected_jointwork_owner_to_chat">该网点有多个房东入驻，请选择一个房源再跟房东聊</string>
    <string name="str_joint_work_info">网点信息</string>
    <string name="str_building_details_info">楼盘信息</string>
    <string name="str_house_details_info">房源信息</string>
    <string name="tip_video_play_exception">视频播放异常</string>
    <string name="str_text_and">和</string>
    <string name="str_system_message">系统消息</string>
    <string name="str_coupon_content">
        &#160;· 1.优惠券仅限在有效期内使用，过期则无法使用；\t\n
        · 2.少量特殊商品不能使用优惠券（有些优惠券标注全场通用则可以使用）；\t\n
        · 3.一张订单只能使用一张优惠券，优惠券不可合并；\t\n
        · 4.每张优惠券只能使用一次，抵价金额未用完下次也不能继续使用；</string>
    <string name="str_house_open_seats">开放工位</string>
    <string name="str_house_garden">园区</string>
    <string name="str_today_read">今日看点</string>
    <string name="str_brand_joint">品牌入驻</string>
    <string name="str_hots_recommend">热门推荐</string>
    <string name="str_all_house">全部房源</string>
    <string name="str_query_all_house">查看全部房源</string>
    <string name="str_wx_login">微信登录</string>
    <string name="str_sms_login">短信登录</string>
    <string name="str_bind_phone">绑定手机号</string>
    <string name="str_video_player_exception">视频播放异常</string>

<!--    微信-->
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_cancel">取消支付</string>
    <string name="pay_error">支付错误</string>
    <string name="pay_exception">支付异常</string>

<!--支付宝-->
    <string name="pay_with_alipay">支付宝支付 Demo</string>
    <string name="pay_with_alipay_hk">HK 支付宝支付 Demo</string>
    <string name="auth_with_alipay">支付宝授权 Demo</string>
    <string name="web_to_native">网页支付转 native 支付 Demo</string>
    <string name="check_sdk_version">支付宝 SDK 版本</string>
    <string name="pay_failed">支付失败:</string>
    <string name="auth_success">授权成功:</string>
    <string name="auth_failed">授权失败:</string>
    <string name="error_missing_appid_rsa_private">错误: 需要配置 PayDemoActivity 中的 APPID 和 RSA_PRIVATE</string>
    <string name="error_missing_hk_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_HK 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="pay_result">支付结果:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">错误: 需要配置PARTNER |APP_ID| RSA_PRIVATE| TARGET_ID</string>
    <string name="alipay_sdk_version_is">支付宝 SDK 版本:</string>
    <string name="confirm">确定</string>
    <string name="error_missing_h5_pay_url">必须配置需要打开的url 站点，请在PayDemoActivity类的h5Pay中配置</string>
    <string name="error">错误</string>
    <string name="pay_cross_border">境外收单支付 Demo</string>
    <string name="error_missing_global_partner_seller_rsa_private" >错误：需要配置 OrderUtils1_0_Global 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="payment_inst_hk">付款方: HK</string>
    <string name="payment_inst_cn">付款方: CN</string>
</resources>
