<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/ly_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/common_divider" />

    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_tab_home"
            android:gravity="center"
            android:text="@string/str_tab_home"
            android:textColor="@color/text_bar_selector"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/tab_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_tab_message"
            android:gravity="center"
            android:text="@string/str_tab_message"
            android:textColor="@color/text_bar_selector"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/tab_collect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_tab_collect"
            android:gravity="center"
            android:text="@string/str_tab_collect"
            android:textColor="@color/text_bar_selector"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/tab_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_tab_mine"
            android:gravity="center"
            android:text="@string/str_tab_mine"
            android:textColor="@color/text_bar_selector"
            android:textSize="@dimen/sp_10" />
    </RadioGroup>
</LinearLayout>