<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_blue_main"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_setting"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_58"
        android:layout_marginEnd="@dimen/dp_18"
        android:src="@mipmap/ic_setting" />

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_206">

        <com.officego.commonlib.view.CircleImage
            android:id="@+id/civ_avatar"
            android:layout_width="@dimen/dp_72"
            android:layout_height="@dimen/dp_72"
            android:layout_marginStart="@dimen/dp_18"
            android:layout_marginTop="@dimen/dp_90"
            android:src="@mipmap/default_avatar"
            app:radius="@dimen/dp_40" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_97"
            android:layout_toEndOf="@+id/civ_avatar"
            android:ellipsize="end"
            android:maxLength="8"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_7"
            android:layout_toEndOf="@+id/civ_avatar"
            android:paddingRight="@dimen/dp_10"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_13" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_110"
            android:layout_marginEnd="@dimen/dp_18"
            android:background="@drawable/button_corners25_edge_transparent"
            android:text="立即登录"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:visibility="gone" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_head"
        android:background="@drawable/bg_rounded_corner_top_white"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            style="@style/marginLeftRight18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.officego.commonlib.view.widget.ItemTextLayout
                android:id="@+id/rl_want"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                app:dividerLine="visible"
                app:imageBackground="@mipmap/ic_coupon_icon"
                app:imageHeight="@dimen/dp_19"
                app:imageWidth="@dimen/dp_16"
                app:textTitle="我想找" />

            <com.officego.commonlib.view.widget.ItemTextLayout
                android:id="@+id/rl_coupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerLine="visible"
                app:imageBackground="@mipmap/ic_coupon_icon"
                app:imageHeight="@dimen/dp_19"
                app:imageWidth="@dimen/dp_16"
                app:textTitle="卡券" />

            <com.officego.commonlib.view.widget.ItemTextLayout
                android:id="@+id/rl_viewing_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerLine="visible"
                app:imageBackground="@mipmap/ic_viewing_date"
                app:imageHeight="@dimen/dp_16"
                app:imageWidth="@dimen/dp_16"
                app:textTitle="@string/str_viewing_date" />

            <com.officego.commonlib.view.widget.ItemTextLayout
                android:id="@+id/rl_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerLine="visible"
                app:imageBackground="@mipmap/ic_help"
                app:imageHeight="@dimen/dp_19"
                app:imageWidth="@dimen/dp_16"
                app:textTitle="@string/str_help" />

            <com.officego.commonlib.view.widget.ItemTextLayout
                android:id="@+id/rl_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerLine="visible"
                app:imageBackground="@mipmap/ic_customer_service"
                app:imageHeight="@dimen/dp_16"
                app:imageWidth="@dimen/dp_16"
                app:textTitle="@string/str_customer_service" />

            <com.officego.commonlib.view.widget.ItemTextLayout
                android:id="@+id/rl_protocol_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerLine="visible"
                app:imageBackground="@mipmap/ic_protocol_service"
                app:imageHeight="@dimen/dp_16"
                app:imageWidth="@dimen/dp_16"
                app:textTitle="@string/str_protocol_service" />

            <com.officego.commonlib.view.widget.ItemTextLayout
                android:id="@+id/rl_protocol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerLine="visible"
                app:imageBackground="@mipmap/ic_protocol_privacy"
                app:imageHeight="@dimen/dp_16"
                app:imageWidth="@dimen/dp_16"
                app:textTitle="@string/str_privacy" />

            <com.officego.commonlib.view.widget.ItemTextLayout
                android:id="@+id/rl_switch_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerLine="visible"
                app:imageBackground="@mipmap/ic_switch_id"
                app:imageHeight="@dimen/dp_16"
                app:imageWidth="@dimen/dp_16"
                app:textTitle="@string/str_switch_owner" />

            <com.officego.commonlib.view.widget.ItemTextLayout
                android:id="@+id/rl_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerLine="visible"
                app:imageBackground="@mipmap/ic_about"
                app:imageHeight="@dimen/dp_16"
                app:imageWidth="@dimen/dp_16"
                app:textTitle="@string/str_about_us" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>