<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        layout="@layout/home_activity_search_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_title" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/marginLeftRight18"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_history"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/str_history"
                android:textColor="@color/text_33"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_clear_history"
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_13"
                android:background="@mipmap/ic_delete_small"
                app:layout_constraintBottom_toBottomOf="@id/tv_history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_history" />

            <com.officego.commonlib.view.LabelsView
                android:id="@+id/label_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isIndicator="false"
                app:labelBackground="@drawable/text_label_gray"
                app:labelTextColor="@color/text_33"
                app:labelTextPaddingBottom="@dimen/dp_3"
                app:labelTextPaddingLeft="@dimen/dp_15"
                app:labelTextPaddingRight="@dimen/dp_15"
                app:labelTextPaddingTop="@dimen/dp_3"
                app:labelTextSize="@dimen/sp_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_history"
                app:lineMargin="@dimen/dp_16"
                app:maxLines="4"
                app:selectType="SINGLE"
                app:wordMargin="@dimen/dp_5" />

            <TextView
                android:id="@+id/tv_find"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/dp_3"
                android:gravity="center"
                android:text="@string/str_find"
                android:textColor="@color/text_33"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_history" />

            <ImageView
                android:id="@+id/iv_refresh"
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_13"
                android:background="@mipmap/ic_refresh_small"
                app:layout_constraintBottom_toBottomOf="@id/tv_find"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_find" />

            <com.officego.commonlib.view.LabelsView
                android:id="@+id/label_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isIndicator="false"
                app:labelBackground="@drawable/text_label_gray"
                app:labelTextColor="@color/text_33"
                app:labelTextPaddingBottom="@dimen/dp_3"
                app:labelTextPaddingLeft="@dimen/dp_15"
                app:labelTextPaddingRight="@dimen/dp_15"
                app:labelTextPaddingTop="@dimen/dp_3"
                app:labelTextSize="@dimen/sp_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_find"
                app:lineMargin="@dimen/dp_16"
                app:maxLines="4"
                app:selectType="SINGLE"
                app:wordMargin="@dimen/dp_5" />

            <TextView
                android:id="@+id/tv_recommend"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/dp_3"
                android:gravity="center"
                android:text="@string/str_recommend"
                android:textColor="@color/text_33"
                android:textSize="@dimen/sp_16"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_find" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp_20"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_recommend" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>